--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# bitvec = "1.0"
+
+[dev-dependencies]
+bytes = "1.4"
+bytesize = "1.3"
+clap = { version = "4.4", features = ["derive"] }
+rand = "0.8"
